--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
-networkx>=3.0
-numpy>=1.24.0
-matplotlib>=3.6.0
-scipy>=1.10.0
+# Core dependencies
+numpy>=1.21.0
+pandas>=1.3.0
+
+# Graph processing
+networkx>=2.6.0
+
+# Configuration parsing
+PyYAML>=6.0
+
+# Spatial utilities
+shapely>=1.8.0
+
+# Simulation & metrics
+scipy>=1.7.0
+
+# Visualization
+matplotlib>=3.4.0
+seaborn>=0.11.0
+
+# JSON utilities (included in standard library, but explicit if extended)
+jsonschema>=4.0.0
+
+# Optional: progress bar for long simulations
+tqdm>=4.60.0
